<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">J-Style Health</string>
    <string name="action_settings">Set</string>
    <string name="hello_world">Hello world!</string>
    <string name="base_home">Home</string>
    <string name="base_sleep">Sleep</string>
    <string name="base_activity">Activity</string>
    <string name="base_progress">Progress</string>
    <string name="base_alarm">Alarm</string>
    <string name="home_page_daily_goald">Daily Goal</string>
    <string name="home_page_blutooth_dialog">Please Pair Device !</string>
    <string name="home_page_ready_sync">You already synchronized over today！</string>
    <string name="select_device">Select a device</string>
    <string name="scanning">Scanning</string>
    <string name="cancel">Cancel</string>
    <string name="paired">paired</string>
    <string name="connected">Connect</string>
    <string name="already_connected">Device Connected</string>
    <string name="progress_steps_tab">Steps</string>
    <string name="progress_time_tab">Time</string>
    <string name="progress_distance_tab">Distance</string>
    <string name="progress_calories_tab">Calories</string>
    <string name="progress_fule_tab">Fuel</string>
    <string name="progress_slept_tab">Slept</string>
    <string name="progress_goald_tab">Goal</string>
    <string name="steps_unit">Steps</string>
    <string name="heart_rate_unit">Heart rate</string>
    <string name="calories_unit">Kcal</string>
    <string name="distance_unit">Km</string>
    <string name="distance_eunit">Mile</string>
    <string name="time_unit">Hour</string>
    <string name="fuel_unit">J</string>
    <string name="date_list_mon">MON</string>
    <string name="date_list_tue">TUE</string>
    <string name="date_list_wed">WED</string>
    <string name="date_list_thu">THU</string>
    <string name="date_list_fri">FRI</string>
    <string name="date_list_sat">SAT</string>
    <string name="date_list_sun">SUN</string>
    <string name="date_tab_month_jan">January</string>
    <string name="date_tab_month_feb">February</string>
    <string name="date_tab_month_mar">March</string>
    <string name="date_tab_month_apr">April</string>
    <string name="date_tab_month_may">May</string>
    <string name="date_tab_month_jun">June</string>
    <string name="date_tab_month_jul">July</string>
    <string name="date_tab_month_aug">August</string>
    <string name="date_tab_month_sep">September</string>
    <string name="date_tab_month_oct">October</string>
    <string name="date_tab_month_nov">November</string>
    <string name="date_tab_month_dec">December</string>
    <string name="sleep_title_time">HOURS SLEPT</string>
    <string name="sleep_title_quality">SLEEP QUALITY</string>
    <string name="activity_title_record">ACTIVITY RECORD</string>
    <string name="activity_title_daily_goald">Daily Goal</string>
    <string name="alarm_title">For emergency,please contact below</string>
    <string name="alarm_phone">Conetact No:</string>
    <string name="alarm_massage">Message:</string>
    <string name="alarm_time">Conetact time:</string>
    <string name="setting_title">Setting</string>
    <string name="setting_bt">Saved</string>
    <string name="setting_height">Height</string>
    <string name="setting_weight">Weight</string>
    <string name="setting_length">Stride Length</string>
    <string name="setting_age">Age</string>
    <string name="setting_sex">Gender</string>
    <string name="setting_set_daily_goald">Get Or Set Daily Goal</string>
    <string name="setting_set_id_code">Set ID Code</string>
    <string name="setting_set_time">Set Device Time</string>
    <string name="setting_dialog_save">To save the information?</string>
    <string name="alarm_phone_not_null">Telephone number can not be empty!</string>
    <string name="alarm_message_not_null">Massage can not be empty!</string>
    <string name="alarm_message_successfully_send">SMS sent successfully!</string>
    <string name="alarm_Without_card">Without a SIM card!</string>
    <string name="no_ble_devices">No LE devices found.</string>
    <string name="popup_title">QUIT YHPedometer Collector?</string>
    <string name="popup_message">Device Quit , Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="popup_finsh">A pedometer on the day of the information has been deleted</string>
    <string name="popup_text">Sure you want to delete data in a pedometer sure want to delete data in a pedometer</string>
    <string name="parameter_clock_weeks_txt">SUN MON TUE WED THU FRI SAT</string>
    <string name="parameter_fatigueremind_timeReach_txt">Interval</string>
    <string name="parameter_clock_minutes_txt">min</string>
    <string name="parameter_fatigueremind_startTime_txt">Start time</string>
    <string name="parameter_fatigueremind_endTime_txt">End Time</string>
    <string name="title_settings">" Settings "</string>
    <string name="parameter_fatigue">Activity Alarm</string>
    <string name="open">open</string>
    <string name="close">Close</string>
    <string name="parameter_clock_selection_time">Select time</string>
    <string name="parameter_clock">Clock</string>
    <string name="parameter_clock_edit_txt">Edit</string>
    <string name="parameter_clock_CanceEditor_txt">Cancel Edit</string>
    <string name="parameter_clock_alarmClock_time_txt">alarm time</string>
    <string name="parameter_clock_intelligentWindowr_txt">smart window</string>
    <string name="parameter_clock_clockRepeatr_txt">alarm repeat</string>
    <string name="weeks_monday">MON</string>
    <string name="weeks_tuesday">TUE</string>
    <string name="weeks_wednesday">WED</string>
    <string name="weeks_thursday">THU</string>
    <string name="weeks_friday">FRI</string>
    <string name="weeks_Saturday">SAT</string>
    <string name="weeks_sunday">SUN</string>
    <string name="parameter_clock_setting">alarm settings</string>
    <string name="confirm">OK</string>
    <string name="alarm_alarm">Alarm</string>
    <string name="alarm_content">"Wear your Tracker to bed, your tracker's alarm will use quite vibrations to wake you up.Or just use them to remind yourself to do more exercises during the day"</string>
    <string name="alarm_remind">Clock Alarm</string>
    <string name="sport_remind">Activity Alarm</string>
    <string name="bluetooth_useType">Bluetooth is not available</string>
    <string name="bluetooth_TypeOpen">Bluetooth has turned on</string>
    <string name="bluetooth_NotOpen">Problem in BT Turning ON</string>
    <string name="bluetooth_Search">Search</string>
    <string name="write_Value">Please enter a value in the range 1-255</string>
    <string name="bluetooth_connectionfail">Device Disconnect</string>
    <string name="bluetooth_updateData">pedometer has been replaced, re-update the historical data!</string>
    <string name="bluetooth_updateDataNow">The date of data Updated</string>
    <string name="month" />
    <string name="day" />
    <string name="data_update">Synchronizing data...</string>
    <string name="alarmClock_work">Days</string>
    <string name="alarmClock_workend">Weekend</string>
    <string name="alarmClock_everyday">Daily</string>
    <string name="finish_system">Press again to exit the program</string>
    <string name="set_stepSuccess">Daily Goal Set Successfully</string>
    <string name="save_informationSuccess">Basic user information has been saved!</string>
    <string name="set_timeSuccess">Device Time Set Successfully</string>
    <string name="set_nameSuccess">Device Name Set Successfully</string>
    <string name="set_remindSuccess">Activity Interval Set Successfully</string>
    <string name="set_clockSuccess">Clock Setting Success!</string>
    <string name="bluetooth_disconnected">Disconnect</string>
    
    <string name="userinfo_save">User information has been saved</string>
    <string name="bluetooth_bundler">Pair</string>
    <string name="bluetooth_setting">Reset</string>
    <string name="set_factorySuccess">Reset success!</string>
    <string name="set_BingingSuccess">Pairing....</string>
    <string name="set_IDValue">ID code for the 1-9, a-z of 14 characters</string>
    
    <string name="choose_photo">Choose Existing Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="photo">Photo</string>
    
    <string name="heart_rate_test">ECG</string>
    
</resources>
