<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/index_layout"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5.0dip"
            android:layout_marginTop="5.0dip" >

            <TextView
                android:id="@+id/year_and_month_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="false"
                android:layout_centerInParent="true"
                android:textSize="16.0sp" />

            <Button
                android:id="@+id/setting_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/setting_bt_selected" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/daily_goald_layout"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.88"
            android:background="@color/transparent"
            android:gravity="center" >

            <TextView
                android:id="@+id/home_page_textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="0"
                android:textSize="60.0sp" />

            <TextView
                android:id="@+id/home_page_textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/home_page_textView1"
                android:text="%" />

            <TextView
                android:id="@+id/home_page_textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/home_page_textView1"
                android:layout_centerHorizontal="true"
                android:text="@string/home_page_daily_goald" />

            <Button
                android:textColor="@color/alarm_yellow"
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10.0dip"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/connection"
                android:text="@string/bluetooth_Search" />
            <!-- 心电图的按钮 -->

            <Button
                android:id="@+id/heart_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/connection"
                android:textColor="@color/blue_back"
                android:text="@string/heart_rate_test" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:layout_marginTop="5.0dip"
            android:orientation="horizontal" >
			
            <LinearLayout
                android:id="@+id/home_data_layout"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20.0dip"
                android:layout_weight="0.4"
                android:gravity="center_vertical"
                android:orientation="vertical" >
						<LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:id="@+id/home_page_imageHeart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/home_heart_rate" />

                    <TextView
                        android:id="@+id/home_page_heart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7.0dip"
                        android:text="0"
                        android:textColor="#ff806396" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="right|center" >

                        <TextView
                            android:id="@+id/home_page_hearttext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5.0dip"
                            android:text="@string/heart_rate_unit"
                            android:textSize="@dimen/home_page_unit" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" >
	
                    <ImageView
                        android:id="@+id/home_page_imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/steps_icon" />

                    <TextView
                        android:id="@+id/home_page_textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5.0dip"
                        android:text="0"
                        android:textColor="#fffd4700" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="right|center" >

                        <TextView
                            android:id="@+id/home_page_textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5.0dip"
                            android:text="@string/steps_unit"
                            android:textSize="@dimen/home_page_unit" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:id="@+id/home_page_imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/calories_icon" />

                    <TextView
                        android:id="@+id/home_page_textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5.0dip"
                        android:text="0.0"
                        android:textColor="#fffeab00" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="right|center" >

                        <TextView
                            android:id="@+id/home_page_textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5.0dip"
                            android:text="@string/calories_unit"
                            android:textSize="@dimen/home_page_unit" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:id="@+id/home_page_imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/distance_icon" />

                    <TextView
                        android:id="@+id/home_page_textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5.0dip"
                        android:text="0.00"
                        android:textColor="#ff1db887" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="right|center" >

                        <TextView
                            android:id="@+id/home_page_textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5.0dip"
                            android:text="@string/distance_unit"
                            android:textSize="@dimen/home_page_unit" />
                    </LinearLayout>
                </LinearLayout>

                

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:id="@+id/home_page_imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/times_icon" />

                    <TextView
                        android:id="@+id/home_page_textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5.0dip"
                        android:text="00:00"
                        android:textColor="#ff4196e4" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="right|center" >

                        <TextView
                            android:id="@+id/home_page_textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5.0dip"
                            android:text="@string/time_unit"
                            android:textSize="@dimen/home_page_unit" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.6"
                android:gravity="center" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/start_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/sync_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/home_page_sync_selected" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ll_con_pb"
        android:layout_width="fill_parent"
        android:layout_height="54.0dip"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible" >

        <ProgressBar
            android:id="@+id/pb_loading"
            style="@style/progressBarStyle"
            android:layout_width="32.0dip"
            android:layout_height="32.0dip"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/home_textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pb_loading"
            android:layout_centerHorizontal="true"
            android:text="@string/data_update" />
    </RelativeLayout>

</RelativeLayout>